--- a/views/home.pug
+++ b/views/home.pug
@@ -102,15 +102,17 @@ block content
                   p Sooner or later you realize that you need to communicate with users, for example by sending a newsletter from time to time.<br>
                     | Or, maybe you need to send emails automatically when user performs a specific action (using transactional emails).<br>
                     | Writing good emails is hard, but sending them for #[strong free] (at least for a small audience) is not, thanks to the following companies.<br>
-                    | And don't forget to subscribe to the newsletter from DeployStack #[a(href="#newsletter") at the bottom of the page]!
+                    | Speaking of emails, don't forget to subscribe to the newsletter from DeployStack #[a(href="#newsletter") at the bottom of the page]!
               include includes/home/emails-table
           section.background-inverse
             .container
               .row
                 .col-sm-12
-                  h2.category__header Foo
-                  p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          section#ssl.ssl.category
+                  h2.category__header Errors tracking
+                  p Not all the bugs are caught with test, so it's important to know when users are seeing errors.<br>
+                    | You can either sift through the logs or use one of the tools for capturing and presenting exceptions in a more readable way.
+              include includes/home/errors-table
+          section
             .container
               .row.u-mb-medium
                 .col-xs-12.col-sm-6
