--- a/views/includes/home/hosting-table.pug
+++ b/views/includes/home/hosting-table.pug
@@ -11,7 +11,7 @@ mixin linode-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.linode.com/?r=9a00d53b309b115b96561104e5bb88ed9ecf9293") Open Linode
 mixin amazon-nostorage
   span No storage<br>
-    | (from 0.1$/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
+    | (from $0.1/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
 
 
 .card.card-nav-tabs.card-plain
@@ -23,245 +23,245 @@ mixin amazon-nostorage
             a(href="#free" aria-controls="free" role="tab" data-toggle="tab") Free
           li(role="presentation")
             a(href="#5usd" aria-controls="5usd" role="tab" data-toggle="tab")
-              span.js-price-normal 5$
-              span.js-price-alternative.js-price-hidden 0.007$
+              span.js-price-normal $5
+              span.js-price-alternative.js-price-hidden $0.007
           li(role="presentation")
             a(href="#10usd" aria-controls="10usd" role="tab" data-toggle="tab")
-              span.js-price-normal 10$
-              span.js-price-alternative.js-price-hidden 0.015$
+              span.js-price-normal $10
+              span.js-price-alternative.js-price-hidden $0.015
           li(role="presentation")
             a(href="#20usd" aria-controls="20usd" role="tab" data-toggle="tab")
-              span.js-price-normal 20$
-              span.js-price-alternative.js-price-hidden 0.03$
+              span.js-price-normal $20
+              span.js-price-alternative.js-price-hidden $0.03
           li(role="presentation")
             a(href="#40usd" aria-controls="40usd" role="tab" data-toggle="tab")
-              span.js-price-normal 40$
-              span.js-price-alternative.js-price-hidden 0.06$
+              span.js-price-normal $40
+              span.js-price-alternative.js-price-hidden $0.06
           li(role="presentation")
             a(href="#80usd" aria-controls="80usd" role="tab" data-toggle="tab")
-              span.js-price-normal 80$
-              span.js-price-alternative.js-price-hidden 0.12$
+              span.js-price-normal $80
+              span.js-price-alternative.js-price-hidden $0.12
           li(role="presentation")
             a(href="#320usd" aria-controls="320usd" role="tab" data-toggle="tab")
-              span.js-price-normal 160$
-              span.js-price-alternative.js-price-hidden 0.48$
-  .content
-    .tab-content.text-center
-      #free.tab-pane.active(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4.col-sm-offset-2
-            .card.price.price-card--450
-              ul
-                li.price__header Amazon
-                li 1 GB RAM
-                li 1 CPU
-                li 30 GB of SSD storage
-                li 750 hours of t2.micro with Linux<br>
-                  | AND<br>
-                  | 750 hours of t2.micro with Windows
-                li First year only
-              .absolute-signup-button
-                +amazon-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--450
-              ul
-                li.price__header Heroku
-                li 512 MB (1 dyno)
-                li 1 CPU
-                li 5 MB for DB (~10 000 rows)
-                li 1000 dyno hours per month (running one website non-stop takes ~750 dyno hours per month)
-                li
-                  button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#HerokuPaas", aria-label="What does it mean?")
-                    span.u-bold Platform as a service &nbsp;
-                      i.material-icons help
-              .absolute-signup-button
-                +heroku-signup
-      #5usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4.col-sm-offset-2
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 512 MB RAM
-                li 1 CPU
-                li 20 GB of SSD storage
-                li 1 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 512 MB RAM
-                li 1 CPU
-                li
-                  +amazon-nostorage
-                li t2.nano
-              .absolute-signup-button
-                +amazon-signup
-      #10usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Linode
-                li 2 GB RAM
-                li 1 CPU
-                li 24 GB of SSD storage
-                li 2 TB of transfer
-              .absolute-signup-button
-                +linode-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 1 GB RAM
-                li 1 CPU
-                li 30 GB of SSD storage
-                li 2 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 1 GB RAM
-                li 1 CPU
-                li
-                  +amazon-nostorage
-                li t2.micro
-              .absolute-signup-button
-                +amazon-signup
-      #20usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Linode
-                li 4 GB RAM
-                li 2 CPU
-                li 48 GB of SSD storage
-                li 3 TB of transfer
-              .absolute-signup-button
-                +linode-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 2 GB RAM
-                li 2 CPU
-                li 40 GB of SSD storage
-                li 3 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 2 GB RAM
-                li 1 CPU
-                li
-                  +amazon-nostorage
-                li t2.small
-              .absolute-signup-button
-                +amazon-signup
-      #40usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Linode
-                li 8 GB RAM
-                li 4 CPU
-                li 96 GB of SSD storage
-                li 4 TB of transfer
-              .absolute-signup-button
-                +linode-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 4 GB RAM
-                li 2 CPU
-                li 60 GB of SSD storage
-                li 4 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 4 GB RAM
-                li 2 CPU
-                li
-                  span 25 GB SSD<br>
-                  | (0.1$/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
-                li t2.medium
-              .absolute-signup-button
-                +amazon-signup
-      #80usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Linode
-                li 12 GB RAM
-                li 6 CPU
-                li 192 GB of SSD storage
-                li 8 TB of transfer
-              .absolute-signup-button
-                +linode-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 8 GB RAM
-                li 4 CPU
-                li 80 GB of SSD storage
-                li 5 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 8 GB RAM
-                li 2 CPU
-                li
-                  +amazon-nostorage
-                li m4.large
-              .absolute-signup-button
-                +amazon-signup
-      #320usd.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Linode
-                li 48 GB RAM
-                li 12 CPU
-                li 768 GB of SSD storage
-                li 20 TB of transfer
-              .absolute-signup-button
-                +linode-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header DigitalOcean
-                li 32 GB RAM
-                li 12 CPU
-                li 320 GB of SSD storage
-                li 7 TB of transfer
-              .absolute-signup-button
-                +digitalocean-signup
-          .col-xs-12.col-sm-4
-            .card.price.price-card--350
-              ul
-                li.price__header Amazon
-                li 32 GB RAM
-                li 8 CPU
-                li
-                  +amazon-nostorage
-                li m4.2xlarge
-              .absolute-signup-button
-                +amazon-signup
+              span.js-price-normal $160
+              span.js-price-alternative.js-price-hidden $0.48
+.content
+  .tab-content.text-center
+    #free.tab-pane.active(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4.col-sm-offset-2
+          .card.price.price-card--450
+            ul
+              li.price__header Amazon
+              li 1 GB RAM
+              li 1 CPU
+              li 30 GB of SSD storage
+              li 750 hours of t2.micro with Linux<br>
+                | AND<br>
+                | 750 hours of t2.micro with Windows
+              li First year only
+            .absolute-signup-button
+              +amazon-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--450
+            ul
+              li.price__header Heroku
+              li 512 MB (1 dyno)
+              li 1 CPU
+              li 5 MB for DB (~10 000 rows)
+              li 1000 dyno hours per month (running one website non-stop takes ~750 dyno hours per month)
+              li
+                button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#HerokuPaas", aria-label="What does it mean?")
+                  span.u-bold Platform as a service &nbsp;
+                    i.material-icons help
+            .absolute-signup-button
+              +heroku-signup
+    #5usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4.col-sm-offset-2
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 512 MB RAM
+              li 1 CPU
+              li 20 GB of SSD storage
+              li 1 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 512 MB RAM
+              li 1 CPU
+              li
+                +amazon-nostorage
+              li t2.nano
+            .absolute-signup-button
+              +amazon-signup
+    #10usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Linode
+              li 2 GB RAM
+              li 1 CPU
+              li 24 GB of SSD storage
+              li 2 TB of transfer
+            .absolute-signup-button
+              +linode-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 1 GB RAM
+              li 1 CPU
+              li 30 GB of SSD storage
+              li 2 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 1 GB RAM
+              li 1 CPU
+              li
+                +amazon-nostorage
+              li t2.micro
+            .absolute-signup-button
+              +amazon-signup
+    #20usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Linode
+              li 4 GB RAM
+              li 2 CPU
+              li 48 GB of SSD storage
+              li 3 TB of transfer
+            .absolute-signup-button
+              +linode-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 2 GB RAM
+              li 2 CPU
+              li 40 GB of SSD storage
+              li 3 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 2 GB RAM
+              li 1 CPU
+              li
+                +amazon-nostorage
+              li t2.small
+            .absolute-signup-button
+              +amazon-signup
+    #40usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Linode
+              li 8 GB RAM
+              li 4 CPU
+              li 96 GB of SSD storage
+              li 4 TB of transfer
+            .absolute-signup-button
+              +linode-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 4 GB RAM
+              li 2 CPU
+              li 60 GB of SSD storage
+              li 4 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 4 GB RAM
+              li 2 CPU
+              li
+                span 25 GB SSD<br>
+                | ($0.1/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
+              li t2.medium
+            .absolute-signup-button
+              +amazon-signup
+    #80usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Linode
+              li 12 GB RAM
+              li 6 CPU
+              li 192 GB of SSD storage
+              li 8 TB of transfer
+            .absolute-signup-button
+              +linode-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 8 GB RAM
+              li 4 CPU
+              li 80 GB of SSD storage
+              li 5 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 8 GB RAM
+              li 2 CPU
+              li
+                +amazon-nostorage
+              li m4.large
+            .absolute-signup-button
+              +amazon-signup
+    #320usd.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Linode
+              li 48 GB RAM
+              li 12 CPU
+              li 768 GB of SSD storage
+              li 20 TB of transfer
+            .absolute-signup-button
+              +linode-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header DigitalOcean
+              li 32 GB RAM
+              li 12 CPU
+              li 320 GB of SSD storage
+              li 7 TB of transfer
+            .absolute-signup-button
+              +digitalocean-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--350
+            ul
+              li.price__header Amazon
+              li 32 GB RAM
+              li 8 CPU
+              li
+                +amazon-nostorage
+              li m4.2xlarge
+            .absolute-signup-button
+              +amazon-signup
