--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -7,81 +7,78 @@ mixin amazon-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/ses/") Open Amazon SES
 
 
-.row.u-mt-medium
-  .u-inline-block
-    .card.card-nav-tabs.card-plain
-      .header.header-primary
-        .nav-tabs-navigation
-          .nav-tabs-wrapper
-            ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
-              li.active(role="presentation")
-                a(href="#email-campaigns" aria-controls="email-campaigns" role="tab" data-toggle="tab") Email campaigns
-              li(role="presentation")
-                a(href="#email-transactional" aria-controls="email-transactional" role="tab" data-toggle="tab") Transactional emails
-.row
-  .content
-    .tab-content.text-center
-      #email-campaigns.tab-pane.active(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4.col-sm-offset-2
-            .card.price
-              ul
-                li.price__header.no-border MailChimp
-                li.u-light-grey Free plan
-                li 12,000 emails per month
-                li 2,000 subscribers
-                li Transactional emails through mandrill<br>
-                  | (requires paid plan)
-                li A/B testing
-                li.no-border
-                  +mailchimp-signup
-          .col-xs-12.col-sm-4
-            .card.price
-              ul
-                li.price__header.no-border SendinBlue
-                li.u-light-grey Free plan
-                li 9,000 emails per month<br>
-                  | (300 emails per day limit)
-                li Unlimited subscribers
-                li Transactional emails
-                li Transactional SMS (paid)
-                li.no-border
-                  +sendinblue-signup
-          //- .col-xs-12.col-sm-4
-          //-   .card.price
-          //-     ul
-          //-       li.price__header RedCappi
-          //-       li Unlimited emails
-          //-       li Only 100 contacts for free
-          //-       li More subscribers from 10$/month
-          //-       li.no-border
-          //-         +mailchimp-signup
-      #email-transactional.tab-pane(role="tabpanel")
-        .row
-          .col-xs-12.col-sm-4
-            .card.price
-              ul
-                li.price__header Amazon SES
-                li 62,000 #[strong free] emails per month
-                li Attachments: 0.12$/GB
-                li Fees for receiving emails
-                li.no-border
-                  +amazon-signup
-          .col-xs-12.col-sm-4
-            .card.price
-              ul
-                li.price__header.no-border SendinBlue
-                li 9,000 #[strong free] emails per month
-                li 300 emails per day limit
-                li Transactional SMS (paid)
-                li.no-border
-                  +sendinblue-signup
-          .col-xs-12.col-sm-4
-            .card.price
-              ul
-                li.price__header Mailgun
-                li 10,000 #[strong free] emails per month
-                li Free incoming emails
-                li Attachments up to 25MB (free)
-                li.no-border
-                  +mailchimp-signup
+.card.card-nav-tabs.card-plain
+  .header.header-primary
+    .nav-tabs-navigation
+      .nav-tabs-wrapper.nav-center
+        ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
+          li.active(role="presentation")
+            a(href="#email-campaigns" aria-controls="email-campaigns" role="tab" data-toggle="tab") Campaign
+          li(role="presentation")
+            a(href="#email-transactional" aria-controls="email-transactional" role="tab" data-toggle="tab") Transactional emails
+.content
+  .tab-content.text-center
+    #email-campaigns.tab-pane.active(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4.col-sm-offset-2
+          .card.price
+            ul
+              li.price__header.no-border MailChimp
+              li.u-light-grey Free plan
+              li 12,000 emails per month
+              li 2,000 subscribers
+              li Transactional emails through mandrill<br>
+                | (requires paid plan)
+              li A/B testing
+              li.no-border
+                +mailchimp-signup
+        .col-xs-12.col-sm-4
+          .card.price
+            ul
+              li.price__header.no-border SendinBlue
+              li.u-light-grey Free plan
+              li 9,000 emails per month<br>
+                | (300 emails per day limit)
+              li Unlimited subscribers
+              li Transactional emails
+              li Transactional SMS (paid)
+              li.no-border
+                +sendinblue-signup
+        //- .col-xs-12.col-sm-4
+        //-   .card.price
+        //-     ul
+        //-       li.price__header RedCappi
+        //-       li Unlimited emails
+        //-       li Only 100 contacts for free
+        //-       li More subscribers from 10$/month
+        //-       li.no-border
+        //-         +mailchimp-signup
+    #email-transactional.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-4
+          .card.price
+            ul
+              li.price__header Amazon SES
+              li 62,000 #[strong free] emails per month
+              li Attachments: 0.12$/GB
+              li Fees for receiving emails
+              li.no-border
+                +amazon-signup
+        .col-xs-12.col-sm-4
+          .card.price
+            ul
+              li.price__header.no-border SendinBlue
+              li 9,000 #[strong free] emails per month
+              li 300 emails per day limit
+              li Transactional SMS (paid)
+              li.no-border
+                +sendinblue-signup
+        .col-xs-12.col-sm-4
+          .card.price
+            ul
+              li.price__header Mailgun
+              li 10,000 #[strong free] emails per month
+              li Free incoming emails
+              li Attachments up to 25MB (free)
+              li.no-border
+                +mailchimp-signup
