--- a/views/home.pug
+++ b/views/home.pug
@@ -16,8 +16,8 @@ block content
             p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
             p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             .hero__buttons.text-center
-              a.btn.btn-primary.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
-              a.btn.btn-primary.u-bold.u-mx-small(href="/faq#general") How we select tools?
+              a.btn.btn-ghost.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
+              a.btn.btn-ghost.u-bold.u-mx-small(href="/faq#general") How we select tools?
   main
     .main.main-raised
         .text-center
