--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -92,67 +92,82 @@ mixin cloudflare-signup
 //-                 li Discounts when paying upfront
 //-                 li.no-border
 //-                   +cdn77-signup
-.row
-  .col-xs-12.col-sm-4
-    .card.price
-      ul
-        li.price__header CDN77
-        li Pay as you go
-        li Transfer: #[strong 0.049 - 0.185 $/GB]
-        li Free storage (up to 50GB)
-        li Points of presence: 32
-        li Transfer discounts start from 30TB
-        li Minimum recharge: #[strong 99$] per year
-        li.no-border
-          +cdn77-signup
-  .col-xs-12.col-sm-4
-    .card.price
-      ul
-        li.price__header CloudFront
-        li Pay as you go
-        li Transfer: #[strong 0.085 - 0.25 $/GB]
-        li Free storage
-        li
-          a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers&nbsp;
-            i.material-icons.material-icons--inline-card open_in_new
-          |:<br>
-          | #[strong 0.020 - 0.16 $/GB]
-        li 10,000 HTTP requests:<br>
-          | #[strong 0.0075 - 0.016 $]
-        li 10,000 HTTPS requests:<br>
-          | #[strong 0.01 - 0.022 $]
-        li Points of presence: 37
-        li Transfer discounts start from 40TB
-        li Discounts when paying upfront
-        li.no-border
-          +amazon-signup
-  .col-xs-12.col-sm-4
-    .card.price
-      ul
-        li.price__header MaxCDN
-        li Monthly fee
-        li 100GB/month: #[strong 9$]<br>
-          | 0.08 per GB overage<br>
-          | 2 Points of Presence
-        li 500GB/month: #[strong 39$]<br>
-          | 0.07 per GB overage<br>
-          | 3 Points of Presence
-        li 1TB/month: #[strong 79$]<br>
-          | 0.06 per GB overage<br>
-          | 5 Points of Presence
-        li 15$ per month to use PoP outside of US and Europe
-        li 12$ per year for each additional PoP
-        li.no-border
-          +maxcdn-signup
-  .col-xs-12.col-sm-4
-    .card.price
-      ul
-        li.price__header CloudFlare
-        li Monthly fee
-        li Free package: 3 page rules
-        li 20$/month: 20 page rules
-        li 200$/month: 50 page rules
-        li DDoS protection <br>
-          | (24/7/365 uptime in higher plans)
-        li.no-border
-          +cloudflare-signup
+
+.card.card-nav-tabs.card-plain
+  .header.header-primary
+    .nav-tabs-navigation
+      .nav-tabs-wrapper.nav-center
+        ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
+          li.active(role="presentation")
+            a(href="#cdn-pay-as-you-go" aria-controls="cdn-pay-as-you-go" role="tab" data-toggle="tab") Pay as you go
+          li.email-tabs(role="presentation")
+            a(href="#cdn-subscriptions" aria-controls="cdn-subscriptions" role="tab" data-toggle="tab") Monthly plans
+.content
+  .tab-content.text-center
+    #cdn-pay-as-you-go.tab-pane.active(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-6
+          .card.price
+            ul
+              li.price__header CDN77
+              li Pay as you go
+              li Transfer: #[strong 0.049 - 0.185 $/GB]
+              li Free storage (up to 50GB)
+              li Points of presence: 32
+              li Transfer discounts start from 30TB
+              li Minimum recharge: #[strong 99$] per year
+              li.no-border
+                +cdn77-signup
+        .col-xs-12.col-sm-6
+          .card.price
+            ul
+              li.price__header CloudFront
+              li Pay as you go
+              li Transfer: #[strong 0.085 - 0.25 $/GB]
+              li Free storage
+              li
+                a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers&nbsp;
+                  i.material-icons.material-icons--inline-card open_in_new
+                |:<br>
+                | #[strong 0.020 - 0.16 $/GB]
+              li 10,000 HTTP requests:<br>
+                | #[strong 0.0075 - 0.016 $]
+              li 10,000 HTTPS requests:<br>
+                | #[strong 0.01 - 0.022 $]
+              li Points of presence: 37
+              li Transfer discounts start from 40TB
+              li Discounts when paying upfront
+              li.no-border
+                +amazon-signup
+    #cdn-subscriptions.tab-pane(role="tabpanel")
+      .row
+        .col-xs-12.col-sm-6
+          .card.price
+            ul
+              li.price__header MaxCDN
+              li Monthly fee
+              li 100GB/month: #[strong 9$]<br>
+                | 0.08 per GB overage<br>
+                | 2 Points of Presence
+              li 500GB/month: #[strong 39$]<br>
+                | 0.07 per GB overage<br>
+                | 3 Points of Presence
+              li 1TB/month: #[strong 79$]<br>
+                | 0.06 per GB overage<br>
+                | 5 Points of Presence
+              li 15$ per month to use PoP outside of US and Europe
+              li 12$ per year for each additional PoP
+              li.no-border
+                +maxcdn-signup
+        .col-xs-12.col-sm-6
+          .card.price
+            ul
+              li.price__header CloudFlare
+              li Monthly fee
+              li Free package: 3 page rules
+              li 20$/month: 20 page rules
+              li 200$/month: 50 page rules
+              li DDoS protection <br>
+                | (24/7/365 uptime in higher plans)
+              li.no-border
+                +cloudflare-signup
