hosting: Added DEPLOYSTACK10 coupon for linode

--- a/views/includes/modals/hosting-modals.pug
+++ b/views/includes/modals/hosting-modals.pug
@@ -31,8 +31,8 @@
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body
         p To get 10$ bonus, use code:
-          pre.copy.uncopied(data-clipboard-text='LINODE10')
-            code LINODE10
+          pre.copy.uncopied(data-clipboard-text='DEPLOYSTACK10')
+            code DEPLOYSTACK10
             span.label.copy-label Copy
             span.label.copied-label Copied!
         p during the registration.
