Added anchor for SSL

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -123,28 +123,32 @@ $bigger-font: 16px;
 
 // Copy widget styles
 .copy {
-  position: relative;
   cursor: pointer;
+  position: relative;
 }
+
 .copy-label,
 .copied-label {
   position: absolute;
   right: 0;
   visibility: hidden;
 }
+
 .uncopied:hover > .copy-label {
   visibility: visible;
 }
+
 .copied > .copied-label {
-  visibility: visible;
   background-color: $primary-blue;
   // Add nice fadeout animation
   opacity: 0;
-  -webkit-transition: opacity 2s ease-in-out;
   -moz-transition: opacity 2s ease-in-out;
   -ms-transition: opacity 2s ease-in-out;
   -o-transition: opacity 2s ease-in-out;
+  -webkit-transition: opacity 2s ease-in-out;
+  visibility: visible;
 }
+
 // To make the label aligned vertically in the middle, add line height
 pre.copy {
   line-height: 22px;
@@ -191,7 +195,9 @@ p {
     text-decoration: underline;
   }
 
-  &__link:hover, &__link:active, &__link:focus {
+  &__link:hover,
+  &__link:active,
+  &__link:focus {
     color: $deep-purple;
   }
 }
