--- a/views/home.pug
+++ b/views/home.pug
@@ -112,7 +112,7 @@ block content
                   p Not all the bugs are caught with test, so it's important to know when users are seeing errors.<br>
                     | You can either sift through the logs or use one of the tools for capturing and presenting exceptions in a more readable way.
               include includes/home/errors-table
-          section
+          section#ssl
             .container
               .row.u-mb-medium
                 .col-xs-12.col-sm-6
