--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html(lang="en")
     //- CSS
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/material-kit.min.css')
-    link(rel='stylesheet', href='/css/main.css?version=20161030')
+    link(rel='stylesheet', href='/css/main.css')
   body
     include includes/header
     block content
@@ -34,8 +34,6 @@ html(lang="en")
 
     //- JS
     script(src='/js/main.min.js')
-    //- TODO: Merge me with other scripts
-    script(src='/js/lib/clipboard.min.js')
 
     //- Google Analytics
     script.
@@ -45,12 +43,13 @@ html(lang="en")
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-85666429-1', 'auto');ga('send', 'pageview');
 
-        //- Heap Analytics - cause it's easier to use than Google
+    //- Heap Analytics - cause it's easier to use than Google
     script.
       window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
       heap.load("2779816653");
 
     //- Custom scripts
+    //- Initialize "click to copy to clipboard" for coupon codes
     script.
       var clipboard = new Clipboard('.copy');
       clipboard.on('success', function(e) {
