Moved $ sign before the number

--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -115,7 +115,7 @@ mixin cloudflare-signup
               li Free storage (up to 50GB)
               li Points of presence: 32
               li Transfer discounts start from 30TB
-              li Minimum recharge: #[strong 99$] per year
+              li Minimum recharge: #[strong $99] per year
               li.no-border
                 +cdn77-signup
         .col-xs-12.col-sm-6
@@ -146,17 +146,17 @@ mixin cloudflare-signup
             ul
               li.price__header MaxCDN
               li Monthly fee
-              li 100GB/month: #[strong 9$]<br>
+              li 100GB/month: #[strong $9]<br>
                 | 0.08 per GB overage<br>
                 | 2 Points of Presence
-              li 500GB/month: #[strong 39$]<br>
+              li 500GB/month: #[strong $39]<br>
                 | 0.07 per GB overage<br>
                 | 3 Points of Presence
-              li 1TB/month: #[strong 79$]<br>
+              li 1TB/month: #[strong $79]<br>
                 | 0.06 per GB overage<br>
                 | 5 Points of Presence
-              li 15$ per month to use PoP outside of US and Europe
-              li 12$ per year for each additional PoP
+              li $15 per month to use PoP outside of US and Europe
+              li $12 per year for each additional PoP
               li.no-border
                 +maxcdn-signup
         .col-xs-12.col-sm-6
@@ -165,8 +165,8 @@ mixin cloudflare-signup
               li.price__header CloudFlare
               li Monthly fee
               li Free package: 3 page rules
-              li 20$/month: 20 page rules
-              li 200$/month: 50 page rules
+              li $20/month: 20 page rules
+              li $200/month: 50 page rules
               li DDoS protection <br>
                 | (24/7/365 uptime in higher plans)
               li.no-border
