--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -54,7 +54,7 @@ mixin amazon-signup
         //-       li.price__header RedCappi
         //-       li Unlimited emails
         //-       li Only 100 contacts for free
-        //-       li More subscribers from 10$/month
+        //-       li More subscribers from $10/month
         //-       li.no-border
         //-         +mailchimp-signup
     #email-transactional.tab-pane(role="tabpanel")
@@ -64,7 +64,7 @@ mixin amazon-signup
             ul
               li.price__header Amazon SES
               li 62,000 #[strong free] emails per month
-              li Attachments: 0.12$/GB
+              li Attachments: $0.12/GB
               li Fees for receiving emails
               li.no-border
                 +amazon-signup
