--- a/views/includes/modals/hosting-modals.pug
+++ b/views/includes/modals/hosting-modals.pug
@@ -30,7 +30,7 @@
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body
-        p To get 10$ bonus, use code:
+        p To get $10 bonus, use code:
           pre.copy.uncopied(data-clipboard-text='DEPLOYSTACK10')
             code DEPLOYSTACK10
             span.label.copy-label Copy
@@ -46,6 +46,6 @@
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body
-        p To get 10$ bonus, simply click the "Open DigitalOcean" button and register
+        p To get $10 bonus, simply click the "Open DigitalOcean" button and register
       .modal-footer
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
