--- a/views/includes/home/vc-table.pug
+++ b/views/includes/home/vc-table.pug
@@ -13,7 +13,7 @@ mixin bitbucket-signup
         li Free public repositiories
         li Free private repositiories
         li Free to host on your servers
-        li Enterprise edition from #[strong 35$]/year
+        li Enterprise edition from #[strong $35]/year
         li.no-border
           +gitlab-signup
   .col-xs-12.col-sm-4
@@ -21,9 +21,9 @@ mixin bitbucket-signup
       ul
         li.price__header GitHub
         li Free public repositiories
-        li Private repositories: #[strong 7$]/month
+        li Private repositories: #[strong $7]/month
         li Free private repositories for students
-        li Host on your servers: #[strong 21$]/user/month
+        li Host on your servers: #[strong $21]/user/month
         li.no-border
           +github-signup
   .col-xs-12.col-sm-4
@@ -32,7 +32,7 @@ mixin bitbucket-signup
         li.price__header Bitbucket
         li Free public repositiories
         li Free private repositiories (5 users)
-        li Above 5 users: #[strong 1$]/user/month
+        li Above 5 users: #[strong $1]/user/month
         li Free for academic accounts
         li.no-border
           +bitbucket-signup
