--- a/views/layout.pug
+++ b/views/layout.pug
@@ -48,9 +48,13 @@ html(lang="en")
       window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
       heap.load("2779816653");
 
-    //- Custom scripts
-    //- Initialize "click to copy to clipboard" for coupon codes
+    //- Custom scripts:
+    //- "Click to copy to clipboard" for coupon codes
     script.
+      //- We need to disable Bootstrap's modal enforce focus to make clipboard.js work
+      //- https://github.com/zenorocha/clipboard.js/issues/155#issuecomment-217372642
+      $.fn.modal.Constructor.prototype.enforceFocus = function() {};
+      //- Now attack the clipboard to all elements with 'copy' class
       var clipboard = new Clipboard('.copy');
       clipboard.on('success', function(e) {
         e.trigger.className = "copy copied";
