--- a/views/home.pug
+++ b/views/home.pug
@@ -102,7 +102,7 @@ block content
                   p Sooner or later you realize that you need to communicate with users, for example by sending a newsletter from time to time.<br>
                     | Or, maybe you need to send emails automatically when user performs a specific action (using transactional emails).<br>
                     | Writing good emails is hard, but sending them for #[strong free] (at least for a small audience) is not, thanks to the following companies.<br>
-                    | Speaking of emails, don't forget to subscribe to the newsletter from DeployStack #[a(href="#newsletter") at the bottom of the page]!
+                    | Speaking of emails, don't forget to subscribe for DeployStack newsletter #[a(href="#newsletter") at the bottom of the page]!
               include includes/home/emails-table
           section.background-inverse
             .container
