--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -3,95 +3,9 @@ mixin cdn77-signup
 mixin amazon-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
 mixin maxcdn-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.maxcdn.com/") Open MaxCDN
 mixin cloudflare-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
-
-//- .card.card-nav-tabs.card-plain
-//-   .header.header-primary
-//-     .nav-tabs-navigation
-//-       .nav-tabs-wrapper
-//-         ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
-//-           li.active(role="presentation")
-//-             a(href="#cdn-1GB" aria-controls="cdn-1GB" role="tab" data-toggle="tab") 1 GB
-//-           li(role="presentation")
-//-             a(href="#cdn-10GB" aria-controls="cdn-10GB" role="tab" data-toggle="tab") 10 GB
-//-           li(role="presentation")
-//-             a(href="#cdn-100GB" aria-controls="cdn-100GB" role="tab" data-toggle="tab") 100 GB
-//-           li(role="presentation")
-//-             a(href="#cdn-1TB" aria-controls="cdn-1000GB" role="tab" data-toggle="tab") 1TB
-//-           li(role="presentation")
-//-             a(href="#cdn-more-1TB" aria-controls="cdn-1TB" role="tab" data-toggle="tab") Over 1 TB
-//-           li(role="presentation")
-//-             a(href="#cdn-other" aria-controls="cdn-other" role="tab" data-toggle="tab") Other
-//-   .content
-//-     .tab-content.text-center
-//-       #cdn-1GB.tab-pane.active(role="tabpanel")
-//-         .row
-//-           .col-xs-12.col-sm-5.col-sm-offset-1
-//-             .card.price
-//-               ul
-//-                 li.price__header CDN77
-//-                 li Transfer: #[strong 0.049 - 0.185 $/GB]
-//-                 li Transfer discounts start from 30TB
-//-                 li Free storage (up to 50GB)
-//-                 li Points of presence: 32
-//-                 li Minimum recharge: #[strong 99$] per year
-//-                 li.no-border
-//-                   +cdn77-signup
-//-           .col-xs-12.col-sm-5
-//-             .card.price
-//-               ul
-//-                 li.price__header Amazon CloudFront
-//-                 li Transfer: #[strong 0.085 - 0.25 $/GB]
-//-                 li Free storage
-//-                 li
-//-                   a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers&nbsp;
-//-                     i.material-icons.material-icons--inline-card open_in_new
-//-                   |:<br>
-//-                   | #[strong 0.020 - 0.16 $/GB]
-//-                 li 10,000 HTTP requests:<br>
-//-                   | #[strong 0.0075 - 0.016 $]
-//-                 li 10,000 HTTPS requests:<br>
-//-                   | #[strong 0.01 - 0.022 $]
-//-                 li Points of presence: 37
-//-                 li Discounts when paying upfront
-//-                 li.no-border
-//-                   +amazon-signup
-//-       #cdn-10GB.tab-pane(role="tabpanel")
-//-         .row
-//-           .col-xs-12.col-sm-5.col-sm-offset-1
-//-             .card.price
-//-               ul
-//-                 li.price__header CDN77
-//-                 li Transfer: #[strong 0.049 - 0.185 $/GB]
-//-                 li Free storage (up to 50GB)
-//-                 li Free HTTP requests
-//-                 li Free HTTPS requests
-//-                 li Points of presence: 32
-//-                 li Minimum recharge: #[strong 99$] per year
-//-                 li Estimated price: $0.049
-//-                 li.no-border
-//-                   +cdn77-signup
-//-           .col-xs-12.col-sm-5
-//-             .card.price
-//-               ul
-//-                 li.price__header Amazon CloudFront
-//-                 li Transfer: #[strong 0.085 - 0.25 $/GB]
-//-                 li Free storage
-//-                 li
-//-                   a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers&nbsp;
-//-                     i.material-icons.material-icons--inline-card open_in_new
-//-                   |:<br>
-//-                   | #[strong 0.020 - 0.16 $/GB]
-//-                 li 10,000 HTTP requests:<br>
-//-                   | #[strong 0.0075 - 0.016 $]
-//-                 li 10,000 HTTPS requests:<br>
-//-                   | #[strong 0.01 - 0.022 $]
-//-                 li Points of presence: 37
-//-                 li Discounts when paying upfront
-//-                 li.no-border
-//-                   +cdn77-signup
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.cloudflare.com/") Open Cloudflare
 
 .card.card-nav-tabs.card-plain
   .header.header-primary
@@ -106,68 +20,54 @@ mixin cloudflare-signup
   .tab-content.text-center
     #cdn-pay-as-you-go.tab-pane.active(role="tabpanel")
       .row
-        .col-xs-12.col-sm-6
-          .card.price
+        .col-xs-12.col-sm-4.col-sm-offset-2
+          .card.price.price-card--500
             ul
               li.price__header CDN77
-              li Pay as you go
               li Transfer: #[strong 0.049 - 0.185 $/GB]
               li Free storage (up to 50GB)
               li Points of presence: 32
               li Transfer discounts start from 30TB
               li Minimum recharge: #[strong $99] per year
-              li.no-border
-                +cdn77-signup
-        .col-xs-12.col-sm-6
-          .card.price
+            .absolute-signup-button
+              +cdn77-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--500
             ul
               li.price__header CloudFront
-              li Pay as you go
               li Transfer: #[strong 0.085 - 0.25 $/GB]
               li Free storage
               li
-                a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers&nbsp;
-                  i.material-icons.material-icons--inline-card open_in_new
-                |:<br>
+                a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers:<br>
                 | #[strong 0.020 - 0.16 $/GB]
               li 10,000 HTTP requests:<br>
                 | #[strong 0.0075 - 0.016 $]
               li 10,000 HTTPS requests:<br>
                 | #[strong 0.01 - 0.022 $]
               li Points of presence: 37
-              li Transfer discounts start from 40TB
-              li Discounts when paying upfront
-              li.no-border
-                +amazon-signup
+            .absolute-signup-button
+              +amazon-signup
     #cdn-subscriptions.tab-pane(role="tabpanel")
       .row
-        .col-xs-12.col-sm-6
-          .card.price
+        .col-xs-12.col-sm-4.col-sm-offset-2
+          .card.price.price-card--400
             ul
               li.price__header MaxCDN
-              li Monthly fee
-              li 100GB/month: #[strong $9]<br>
-                | 0.08 per GB overage<br>
-                | 2 Points of Presence
-              li 500GB/month: #[strong $39]<br>
-                | 0.07 per GB overage<br>
-                | 3 Points of Presence
-              li 1TB/month: #[strong $79]<br>
-                | 0.06 per GB overage<br>
-                | 5 Points of Presence
+              li 100GB/month (2 PoP): #[strong $9]
+              li 500GB/month (3 PoP): #[strong $39]
+              li 1TB/month (5 PoP): #[strong $79]
               li $15 per month to use PoP outside of US and Europe
               li $12 per year for each additional PoP
-              li.no-border
-                +maxcdn-signup
-        .col-xs-12.col-sm-6
-          .card.price
+            .absolute-signup-button
+              +maxcdn-signup
+        .col-xs-12.col-sm-4
+          .card.price.price-card--400
             ul
               li.price__header CloudFlare
-              li Monthly fee
               li Free package: 3 page rules
-              li $20/month: 20 page rules
-              li $200/month: 50 page rules
+              li #[strong $20]/month: 20 page rules
+              li #[strong $200]/month: 50 page rules
               li DDoS protection <br>
                 | (24/7/365 uptime in higher plans)
-              li.no-border
-                +cloudflare-signup
+            .absolute-signup-button
+              +cloudflare-signup
