--- a/views/includes/modals/hosting-modals.pug
+++ b/views/includes/modals/hosting-modals.pug
@@ -29,7 +29,7 @@
     .modal-content
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
-      .modal-body
+      .modal-body.text-center
         p To get $10 bonus, use code:
           pre.copy.uncopied(data-clipboard-text='DEPLOYSTACK10')
             code DEPLOYSTACK10
@@ -45,7 +45,7 @@
     .modal-content
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
-      .modal-body
+      .modal-body.text-center
         p Everyone gets $10 credits when they sign up for DigitalOcean.<br>
           | Simply click the "Open DigitalOcean" button and register.
       .modal-footer
