--- a/views/faq.pug
+++ b/views/faq.pug
@@ -133,6 +133,7 @@ block content
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
                 .panel.panel-default#cdn-other-benefits
                   +accordion-header('cdn-other-benefits')
-                    | What other benefits you get from using a CDN?
+                    | What benefits you get from using a CDN?
                   +accordion-body('cdn-other-benefits')
-                    p They help with DDOS attack. Instead of all traffic coming to your server and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than then average (in which case, you are probably terribly overpaying for the hosting during most of the time :) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
+                    p Most common benefit is the speed improvement - content of your website is distributed in different Points of Presence around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, making you website load faster. Using a CDN can save you some bandwith (the files are not server from your hosting, but from the CDN).
+                    p They can also help with DDoS attacks. Instead of all traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than then average (in which case, you are probably terribly overpaying for the hosting most of the time :) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
