Added sendinblue affiliation link

--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -1,7 +1,7 @@
 mixin mailchimp-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="http://eepurl.com/crOTP5") Open MailChimp
 mixin sendinblue-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.sendinblue.com/") Open SendinBlue
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.sendinblue.com/?ae=445") Open SendinBlue
 mixin amazon-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/ses/") Open Amazon SES
 mixin mailgun-signup
