Fixed Mailchimp modal bug

--- a/views/home.pug
+++ b/views/home.pug
@@ -137,3 +137,4 @@ block content
   //- Modals
   section.modals
     include includes/modals/hosting-modals
+    include includes/modals/emails-modals
